# CLionProjectTemplate

./: CMakeLists.txt
app/: CMakeLists.txt  main.cxx
headers/: lib.hxx  libMain.hxx  main.hxx
src/: CMakeLists.txt  lib.cxx  libMain.cxx  main.cxx
test/: CMakeLists.txt  main.cxx
tests/: CMakeLists.txt  GTest.txt.in  SuperCMakeLists.cmake  maintest.cxx
